@@ -1,3 +1,8 @@
+2007-02-14  Jakub Jelinek  <jakub@redhat.com>
+	Andrew Haley  <aph@redhat.com>
+
+	* java/util/TimeZone.java (getDateParams): Negate dayOfWeek.
+
 2012-03-22  Andrew John Hughes  <ahughes@redhat.com>
 
 	* java/util/regex/Matcher.java:
